exports[`invalid(1): #dialog, .dialog { & .close {} } 1`] = `

  1 | #dialog, .dialog { & .close {} }

`;

exports[`invalid(1): #dialog, .dialog { & .close {} } 2`] = `

Message:
> 1 | #dialog, .dialog { & .close {} }
    |                    ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(10): :nth-child(2n of #dialog), #modal { & .close {} } 1`] = `

  1 | :nth-child(2n of #dialog), #modal { & .close {} }

`;

exports[`invalid(10): :nth-child(2n of #dialog), #modal { & .close {} } 2`] = `

Message:
> 1 | :nth-child(2n of #dialog), #modal { & .close {} }
    |                                     ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(11): :host(#dialog), #modal { & .close {} } 1`] = `

  1 | :host(#dialog), #modal { & .close {} }

`;

exports[`invalid(11): :host(#dialog), #modal { & .close {} } 2`] = `

Message:
> 1 | :host(#dialog), #modal { & .close {} }
    |                          ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(12): &, :hover { .close {} } 1`] = `

  1 | &, :hover { .close {} }

`;

exports[`invalid(12): &, :hover { .close {} } 2`] = `

Message:
> 1 | &, :hover { .close {} }
    |             ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(13): *|dialog, |* { & .close {} } 1`] = `

  1 | *|dialog, |* { & .close {} }

`;

exports[`invalid(13): *|dialog, |* { & .close {} } 2`] = `

Message:
> 1 | *|dialog, |* { & .close {} }
    |                ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(14): @scope (.root) { #dialog, .dialog { .close {} } } 1`] = `

  1 | @scope (.root) { #dialog, .dialog { .close {} } }

`;

exports[`invalid(14): @scope (.root) { #dialog, .dialog { .close {} } } 2`] = `

Message:
> 1 | @scope (.root) { #dialog, .dialog { .close {} } }
    |                                     ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(15): @scope (.root) { #dialog, > .dialog { .close {} } } 1`] = `

  1 | @scope (.root) { #dialog, > .dialog { .close {} } }

`;

exports[`invalid(15): @scope (.root) { #dialog, > .dialog { .close {} } } 2`] = `

Message:
> 1 | @scope (.root) { #dialog, > .dialog { .close {} } }
    |                                       ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(16): #dialog, .dialog { @MEDIA (width > 40rem) { & .close {} } } 1`] = `

  1 | #dialog, .dialog { @MEDIA (width > 40rem) { & .close {} } }

`;

exports[`invalid(16): #dialog, .dialog { @MEDIA (width > 40rem) { & .close {} } } 2`] = `

Message:
> 1 | #dialog, .dialog { @MEDIA (width > 40rem) { & .close {} } }
    |                                             ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(17): .root { :where(&), & { .child {} } } 1`] = `

  1 | .root { :where(&), & { .child {} } }

`;

exports[`invalid(17): .root { :where(&), & { .child {} } } 2`] = `

Message:
> 1 | .root { :where(&), & { .child {} } }
    |                        ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(18): .root { :is(:unknown(&), .bar), &:hover { .child {} } } 1`] = `

  1 | .root { :is(:unknown(&), .bar), &:hover { .child {} } }

`;

exports[`invalid(18): .root { :is(:unknown(&), .bar), &:hover { .child {} } } 2`] = `

Message:
> 1 | .root { :is(:unknown(&), .bar), &:hover { .child {} } }
    |                                           ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(19): .root { > &, & { .child {} } } 1`] = `

  1 | .root { > &, & { .child {} } }

`;

exports[`invalid(19): .root { > &, & { .child {} } } 2`] = `

Message:
> 1 | .root { > &, & { .child {} } }
    |                  ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(2): #dialog, .dialog { .close {} } 1`] = `

  1 | #dialog, .dialog { .close {} }

`;

exports[`invalid(2): #dialog, .dialog { .close {} } 2`] = `

Message:
> 1 | #dialog, .dialog { .close {} }
    |                    ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(20): #root, .root { .child { .grandchild {} } } 1`] = `

  1 | #root, .root { .child { .grandchild {} } }

`;

exports[`invalid(20): #root, .root { .child { .grandchild {} } } 2`] = `

Message:
> 1 | #root, .root { .child { .grandchild {} } }
    |                ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(21): #dialog,\n.dialog {\n\t& .close {}\n\t& .submit {}\n} 1`] = `

  1 | #dialog,
  2 | .dialog {
  3 | 	& .close {}
  4 | 	& .submit {}
  5 | }

`;

exports[`invalid(21): #dialog,\n.dialog {\n\t& .close {}\n\t& .submit {}\n} 2`] = `

Message:
  1 | #dialog,
  2 | .dialog {
> 3 | 	& .close {}
    | 	^^^^^^^^ Do not nest rules under selector lists with mixed specificity.
  4 | 	& .submit {}
  5 | }

`;

exports[`invalid(21): #dialog,\n.dialog {\n\t& .close {}\n\t& .submit {}\n} 3`] = `

Message:
  1 | #dialog,
  2 | .dialog {
  3 | 	& .close {}
> 4 | 	& .submit {}
    | 	^^^^^^^^^ Do not nest rules under selector lists with mixed specificity.
  5 | }

`;

exports[`invalid(22): #dialog,\n.dialog {\n\t@media (width > 40rem) {\n\t\t@layer components {\n\t\t\t& .close {}\n\t\t}\n\t}\n} 1`] = `

  1 | #dialog,
  2 | .dialog {
  3 | 	@media (width > 40rem) {
  4 | 		@layer components {
  5 | 			& .close {}
  6 | 		}
  7 | 	}
  8 | }

`;

exports[`invalid(22): #dialog,\n.dialog {\n\t@media (width > 40rem) {\n\t\t@layer components {\n\t\t\t& .close {}\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | #dialog,
  2 | .dialog {
  3 | 	@media (width > 40rem) {
  4 | 		@layer components {
> 5 | 			& .close {}
    | 			^^^^^^^^ Do not nest rules under selector lists with mixed specificity.
  6 | 		}
  7 | 	}
  8 | }

`;

exports[`invalid(23): .root { #dialog, .dialog { .close {} } } 1`] = `

  1 | .root { #dialog, .dialog { .close {} } }

`;

exports[`invalid(23): .root { #dialog, .dialog { .close {} } } 2`] = `

Message:
> 1 | .root { #dialog, .dialog { .close {} } }
    |                            ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(24): .root { &&, & { .close {} } } 1`] = `

  1 | .root { &&, & { .close {} } }

`;

exports[`invalid(24): .root { &&, & { .close {} } } 2`] = `

Message:
> 1 | .root { &&, & { .close {} } }
    |                 ^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(25): #dialog::before, .dialog { #inner, .inner { .grandchild {} } } 1`] = `

  1 | #dialog::before, .dialog { #inner, .inner { .grandchild {} } }

`;

exports[`invalid(25): #dialog::before, .dialog { #inner, .inner { .grandchild {} } } 2`] = `

Message:
> 1 | #dialog::before, .dialog { #inner, .inner { .grandchild {} } }
    |                                             ^^^^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(26): :is(.dialog, #dialog), #modal { & .close {} } 1`] = `

  1 | :is(.dialog, #dialog), #modal { & .close {} }

`;

exports[`invalid(26): :is(.dialog, #dialog), #modal { & .close {} } 2`] = `

Message:
> 1 | :is(.dialog, #dialog), #modal { & .close {} }
    | ^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(27): :not(.dialog, #dialog), #modal { & .close {} } 1`] = `

  1 | :not(.dialog, #dialog), #modal { & .close {} }

`;

exports[`invalid(27): :not(.dialog, #dialog), #modal { & .close {} } 2`] = `

Message:
> 1 | :not(.dialog, #dialog), #modal { & .close {} }
    | ^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:not()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(28): :has(.dialog, #dialog), #modal { & .close {} } 1`] = `

  1 | :has(.dialog, #dialog), #modal { & .close {} }

`;

exports[`invalid(28): :has(.dialog, #dialog), #modal { & .close {} } 2`] = `

Message:
> 1 | :has(.dialog, #dialog), #modal { & .close {} }
    | ^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:has()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(29): .button:is(:hover, #featured) { color: blue; } 1`] = `

  1 | .button:is(:hover, #featured) { color: blue; }

`;

exports[`invalid(29): .button:is(:hover, #featured) { color: blue; } 2`] = `

Message:
> 1 | .button:is(:hover, #featured) { color: blue; }
    |        ^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(3): #dialog, .dialog { &::before {} } 1`] = `

  1 | #dialog, .dialog { &::before {} }

`;

exports[`invalid(3): #dialog, .dialog { &::before {} } 2`] = `

Message:
> 1 | #dialog, .dialog { &::before {} }
    |                    ^^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(30): .button:not(:hover, #featured) {} 1`] = `

  1 | .button:not(:hover, #featured) {}

`;

exports[`invalid(30): .button:not(:hover, #featured) {} 2`] = `

Message:
> 1 | .button:not(:hover, #featured) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:not()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(31): .button:has(> .icon, + #featured) {} 1`] = `

  1 | .button:has(> .icon, + #featured) {}

`;

exports[`invalid(31): .button:has(> .icon, + #featured) {} 2`] = `

Message:
> 1 | .button:has(> .icon, + #featured) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:has()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(32): .button:nth-child(even of .item, #featured) {} 1`] = `

  1 | .button:nth-child(even of .item, #featured) {}

`;

exports[`invalid(32): .button:nth-child(even of .item, #featured) {} 2`] = `

Message:
> 1 | .button:nth-child(even of .item, #featured) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:nth-child()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(33): .button:nth-last-child(odd of .item, #featured) {} 1`] = `

  1 | .button:nth-last-child(odd of .item, #featured) {}

`;

exports[`invalid(33): .button:nth-last-child(odd of .item, #featured) {} 2`] = `

Message:
> 1 | .button:nth-last-child(odd of .item, #featured) {}
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:nth-last-child()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(34): :is(a, .item) {} 1`] = `

  1 | :is(a, .item) {}

`;

exports[`invalid(34): :is(a, .item) {} 2`] = `

Message:
> 1 | :is(a, .item) {}
    | ^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-0-1, 0-1-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(35): :is(.one.two, #featured) {} 1`] = `

  1 | :is(.one.two, #featured) {}

`;

exports[`invalid(35): :is(.one.two, #featured) {} 2`] = `

Message:
> 1 | :is(.one.two, #featured) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-2-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(36): :is(.item, /* Keep this comment. */ #featured) {} 1`] = `

  1 | :is(.item, /* Keep this comment. */ #featured) {}

`;

exports[`invalid(36): :is(.item, /* Keep this comment. */ #featured) {} 2`] = `

Message:
> 1 | :is(.item, /* Keep this comment. */ #featured) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(37): :IS(.item, #featured) {} 1`] = `

  1 | :IS(.item, #featured) {}

`;

exports[`invalid(37): :IS(.item, #featured) {} 2`] = `

Message:
> 1 | :IS(.item, #featured) {}
    | ^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(38): :NOT(.item, #featured) {} 1`] = `

  1 | :NOT(.item, #featured) {}

`;

exports[`invalid(38): :NOT(.item, #featured) {} 2`] = `

Message:
> 1 | :NOT(.item, #featured) {}
    | ^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:not()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(39): :HAS(> .item, #featured) {} 1`] = `

  1 | :HAS(> .item, #featured) {}

`;

exports[`invalid(39): :HAS(> .item, #featured) {} 2`] = `

Message:
> 1 | :HAS(> .item, #featured) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:has()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(4): #dialog, .dialog { ::before {} } 1`] = `

  1 | #dialog, .dialog { ::before {} }

`;

exports[`invalid(4): #dialog, .dialog { ::before {} } 2`] = `

Message:
> 1 | #dialog, .dialog { ::before {} }
    |                    ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(40): :NTH-CHILD(2n of .item, #featured) {} 1`] = `

  1 | :NTH-CHILD(2n of .item, #featured) {}

`;

exports[`invalid(40): :NTH-CHILD(2n of .item, #featured) {} 2`] = `

Message:
> 1 | :NTH-CHILD(2n of .item, #featured) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:nth-child()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(41): :NTH-LAST-CHILD(odd of .item, #featured) {} 1`] = `

  1 | :NTH-LAST-CHILD(odd of .item, #featured) {}

`;

exports[`invalid(41): :NTH-LAST-CHILD(odd of .item, #featured) {} 2`] = `

Message:
> 1 | :NTH-LAST-CHILD(odd of .item, #featured) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:nth-last-child()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(42): :is(.\\69 tem, #\\66 eatured) {} 1`] = `

  1 | :is(.\\69 tem, #\\66 eatured) {}

`;

exports[`invalid(42): :is(.\\69 tem, #\\66 eatured) {} 2`] = `

Message:
> 1 | :is(.\\69 tem, #\\66 eatured) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(43): :is(:where(#featured), .item) {} 1`] = `

  1 | :is(:where(#featured), .item) {}

`;

exports[`invalid(43): :is(:where(#featured), .item) {} 2`] = `

Message:
> 1 | :is(:where(#featured), .item) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-0-0, 0-1-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(44): :where(.item):is(.item, #featured) {} 1`] = `

  1 | :where(.item):is(.item, #featured) {}

`;

exports[`invalid(44): :where(.item):is(.item, #featured) {} 2`] = `

Message:
> 1 | :where(.item):is(.item, #featured) {}
    |              ^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(45): :is(:not(.item, #featured), #other) {} 1`] = `

  1 | :is(:not(.item, #featured), #other) {}

`;

exports[`invalid(45): :is(:not(.item, #featured), #other) {} 2`] = `

Message:
> 1 | :is(:not(.item, #featured), #other) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:not()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(46): :is(.item, #featured):has(.icon, #icon) {} 1`] = `

  1 | :is(.item, #featured):has(.icon, #icon) {}

`;

exports[`invalid(46): :is(.item, #featured):has(.icon, #icon) {} 2`] = `

Message:
> 1 | :is(.item, #featured):has(.icon, #icon) {}
    | ^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(46): :is(.item, #featured):has(.icon, #icon) {} 3`] = `

Message:
> 1 | :is(.item, #featured):has(.icon, #icon) {}
    |                      ^^^^^^^^^^^^^^^^^^ The selectors in \`:has()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(47): #root { :is(&, .item) {} } 1`] = `

  1 | #root { :is(&, .item) {} }

`;

exports[`invalid(47): #root { :is(&, .item) {} } 2`] = `

Message:
> 1 | #root { :is(&, .item) {} }
    |         ^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (1-0-0, 0-1-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(48): .root { :is(&&, &) {} } 1`] = `

  1 | .root { :is(&&, &) {} }

`;

exports[`invalid(48): .root { :is(&&, &) {} } 2`] = `

Message:
> 1 | .root { :is(&&, &) {} }
    |         ^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-2-0, 0-1-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(49): .root { :has(> &&, + &) {} } 1`] = `

  1 | .root { :has(> &&, + &) {} }

`;

exports[`invalid(49): .root { :has(> &&, + &) {} } 2`] = `

Message:
> 1 | .root { :has(> &&, + &) {} }
    |         ^^^^^^^^^^^^^^^ The selectors in \`:has()\` have mixed specificity (0-2-0, 0-1-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(5): button, .button { & .icon {} } 1`] = `

  1 | button, .button { & .icon {} }

`;

exports[`invalid(5): button, .button { & .icon {} } 2`] = `

Message:
> 1 | button, .button { & .icon {} }
    |                   ^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(50): .root { .child { :is(&, .item) {} } } 1`] = `

  1 | .root { .child { :is(&, .item) {} } }

`;

exports[`invalid(50): .root { .child { :is(&, .item) {} } } 2`] = `

Message:
> 1 | .root { .child { :is(&, .item) {} } }
    |                  ^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-2-0, 0-1-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(51): #root, .root { &:is(.item, #featured) {} } 1`] = `

  1 | #root, .root { &:is(.item, #featured) {} }

`;

exports[`invalid(51): #root, .root { &:is(.item, #featured) {} } 2`] = `

Message:
> 1 | #root, .root { &:is(.item, #featured) {} }
    |                ^^^^^^^^^^^^^^^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(51): #root, .root { &:is(.item, #featured) {} } 3`] = `

Message:
> 1 | #root, .root { &:is(.item, #featured) {} }
    |                 ^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(52): @media (width > 40rem) { :is(.item, #featured) {} } 1`] = `

  1 | @media (width > 40rem) { :is(.item, #featured) {} }

`;

exports[`invalid(52): @media (width > 40rem) { :is(.item, #featured) {} } 2`] = `

Message:
> 1 | @media (width > 40rem) { :is(.item, #featured) {} }
    |                          ^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(53): @supports (display: grid) { :not(.item, #featured) {} } 1`] = `

  1 | @supports (display: grid) { :not(.item, #featured) {} }

`;

exports[`invalid(53): @supports (display: grid) { :not(.item, #featured) {} } 2`] = `

Message:
> 1 | @supports (display: grid) { :not(.item, #featured) {} }
    |                             ^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:not()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(54): @container (width > 40rem) { :has(.item, #featured) {} } 1`] = `

  1 | @container (width > 40rem) { :has(.item, #featured) {} }

`;

exports[`invalid(54): @container (width > 40rem) { :has(.item, #featured) {} } 2`] = `

Message:
> 1 | @container (width > 40rem) { :has(.item, #featured) {} }
    |                              ^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:has()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(55): @layer components { :nth-child(2n of .item, #featured) {} } 1`] = `

  1 | @layer components { :nth-child(2n of .item, #featured) {} }

`;

exports[`invalid(55): @layer components { :nth-child(2n of .item, #featured) {} } 2`] = `

Message:
> 1 | @layer components { :nth-child(2n of .item, #featured) {} }
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:nth-child()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(56): @scope (.root) { :nth-last-child(odd of .item, #featured) {} } 1`] = `

  1 | @scope (.root) { :nth-last-child(odd of .item, #featured) {} }

`;

exports[`invalid(56): @scope (.root) { :nth-last-child(odd of .item, #featured) {} } 2`] = `

Message:
> 1 | @scope (.root) { :nth-last-child(odd of .item, #featured) {} }
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:nth-last-child()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(57): .root { @media (width > 40rem) { @layer components { :is(&, #featured) {} } } } 1`] = `

  1 | .root { @media (width > 40rem) { @layer components { :is(&, #featured) {} } } }

`;

exports[`invalid(57): .root { @media (width > 40rem) { @layer components { :is(&, #featured) {} } } } 2`] = `

Message:
> 1 | .root { @media (width > 40rem) { @layer components { :is(&, #featured) {} } } }
    |                                                      ^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(58): .button:is(:hover, #featured)::before { content: \"\"; } 1`] = `

  1 | .button:is(:hover, #featured)::before { content: ""; }

`;

exports[`invalid(58): .button:is(:hover, #featured)::before { content: \"\"; } 2`] = `

Message:
> 1 | .button:is(:hover, #featured)::before { content: ""; }
    |        ^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(59): #root, .root { :is(&, #featured) {} } 1`] = `

  1 | #root, .root { :is(&, #featured) {} }

`;

exports[`invalid(59): #root, .root { :is(&, #featured) {} } 2`] = `

Message:
> 1 | #root, .root { :is(&, #featured) {} }
    |                ^^^^^^^^^^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(6): [open], dialog { & .close {} } 1`] = `

  1 | [open], dialog { & .close {} }

`;

exports[`invalid(6): [open], dialog { & .close {} } 2`] = `

Message:
> 1 | [open], dialog { & .close {} }
    |                  ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(60): :is(:unknown, .item, #featured) {} 1`] = `

  1 | :is(:unknown, .item, #featured) {}

`;

exports[`invalid(60): :is(:unknown, .item, #featured) {} 2`] = `

Message:
> 1 | :is(:unknown, .item, #featured) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(61): .root { :nth-last-child(odd of &&, &) {} } 1`] = `

  1 | .root { :nth-last-child(odd of &&, &) {} }

`;

exports[`invalid(61): .root { :nth-last-child(odd of &&, &) {} } 2`] = `

Message:
> 1 | .root { :nth-last-child(odd of &&, &) {} }
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:nth-last-child()\` have mixed specificity (0-2-0, 0-1-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(62): :nth-child(2n of :is(.item, #featured), .other) {} 1`] = `

  1 | :nth-child(2n of :is(.item, #featured), .other) {}

`;

exports[`invalid(62): :nth-child(2n of :is(.item, #featured), .other) {} 2`] = `

Message:
> 1 | :nth-child(2n of :is(.item, #featured), .other) {}
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:nth-child()\` have mixed specificity (1-0-0, 0-1-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(62): :nth-child(2n of :is(.item, #featured), .other) {} 3`] = `

Message:
> 1 | :nth-child(2n of :is(.item, #featured), .other) {}
    |                  ^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(63): ::slotted(:is(.item, #featured)) {} 1`] = `

  1 | ::slotted(:is(.item, #featured)) {}

`;

exports[`invalid(63): ::slotted(:is(.item, #featured)) {} 2`] = `

Message:
> 1 | ::slotted(:is(.item, #featured)) {}
    |           ^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(7): :hover, dialog { & .close {} } 1`] = `

  1 | :hover, dialog { & .close {} }

`;

exports[`invalid(7): :hover, dialog { & .close {} } 2`] = `

Message:
> 1 | :hover, dialog { & .close {} }
    |                  ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(8): :where(#dialog), :is(.dialog, #dialog) { & .close {} } 1`] = `

  1 | :where(#dialog), :is(.dialog, #dialog) { & .close {} }

`;

exports[`invalid(8): :where(#dialog), :is(.dialog, #dialog) { & .close {} } 2`] = `

Message:
> 1 | :where(#dialog), :is(.dialog, #dialog) { & .close {} }
    |                  ^^^^^^^^^^^^^^^^^^^^^ The selectors in \`:is()\` have mixed specificity (0-1-0, 1-0-0). The most specific selector determines the specificity of the list.

`;

exports[`invalid(8): :where(#dialog), :is(.dialog, #dialog) { & .close {} } 3`] = `

Message:
> 1 | :where(#dialog), :is(.dialog, #dialog) { & .close {} }
    |                                          ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;

exports[`invalid(9): :is(::before, *), div { & .close {} } 1`] = `

  1 | :is(::before, *), div { & .close {} }

`;

exports[`invalid(9): :is(::before, *), div { & .close {} } 2`] = `

Message:
> 1 | :is(::before, *), div { & .close {} }
    |                         ^^^^^^^^ Do not nest rules under selector lists with mixed specificity.

`;
